# nimotv

./: README  data.py  index.html  jp.db  kvdb.py  main.py  nimosocket.js  pyproject.toml  requirements.txt  script.js  siosrv.py  socketclient.py  sqldb.py  util.py
old/: index.html  nimocoin.user.js
templates/: beanlot.html  index.html  jackpot.html
