[tool.poetry]
name = "repl_python3_nimotv"
version = "0.1.0"
description = ""
authors = ["silverwolfceh <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
pickleDB = "^0.9.2"
ws4py = "^0.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
